# CS219-project

./: .gitignore  README.md
project1/: Makefile  README.md  calculator  demo  demo.c
project1/inc/: calculator.h
project1/src/: calculator.c
project1/test/: test_calculator.c
project2/: ComparisonBetweenCandJava.ipynb  README.md
project2/scripts/: c_performance_run_test.sh  compare_c_optimization.sh  compare_performance.sh  java_performance_run_test.sh
project2/src/: C_vector_dot_product.c  JavaVectorDotProduct.java  Makefile  c_vector_dot_product  optimal_c_vector_product  optimal_c_vector_product.c  testcase_generator  testcase_generator.c
project2/test/: C_run_performance_test.sh  Makefile  compare_performance.sh  run_java_tests.sh  run_tests.sh  run_valgrind.sh
project3/: Makefile  bmp_generator  test_results.csv  visualize_performance.py
project3/INTRODUCTION/: REPORT.md  standard_report.md
project3/src/: bmp_generator.c  optimal_bmpedit.c  standard_bmpedit_combined.c
project3/test/: run_batch_test.sh  test_performance.sh
project4/: DEEPSEEK analysis.md  GPT analysis.md  Log.md  plot.py  report.md  图像处理库项目报告.md
project4/提交的文件/: CMakeLists.txt  demo.cpp  optimal_image.h  optimal_image_ops.cpp
project5/: plot1.py  plot2.py  report.md  要求.md
project5/提交的文件/: OptimalImage.py  demo.cpp  demo.py  demo.rs  image_processor.rs  optimal_image.cpp  optimal_image_ops.cpp
